test/success/inline-return.dsk
let add = (a: int, b: int) -> return a + b

assert(add(10,10) == 20)
