test/error/sema/invalid-struct-field.dsk
let S = struct
    a: int
end

let s = S(a = 1)
echo(s.b)
